--- a/package.json
+++ b/package.json
@@ -11,16 +11,23 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
+    "@tanstack/react-query": "^5.32.0",
+    "axios": "^1.6.8",
+    "firebase": "^10.11.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
+    "react-hook-form": "^7.51.3",
+    "react-icons": "^5.1.0",
     "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.2",
+    "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.10.8",
     "swiper": "^11.0.7"
   },
   "devDependencies": {
