--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.4.0",
     "@tanstack/react-query": "^5.32.0",
     "axios": "^1.6.8",
     "firebase": "^10.11.1",
@@ -26,8 +28,9 @@
     "react-router-dom": "^6.22.2",
     "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.0.2",
-    "sort-by": "^1.2.0",
-    "sweetalert2": "^11.10.8",
+    "recharts": "^2.12.7",
+    "sort-by": "^0.0.2",
+    "sweetalert2": "^11.6.13",
     "swiper": "^11.0.7"
   },
   "devDependencies": {
